Git Tests/force-app/main/default/default/objects/RegraBloqueioArmazem__c/RegraBloqueioArmazem__c.object-meta.xml
<CustomObject>
    <label>Regra de bloqueio por armazém</label>
    <nameField>
        <displayFormat>BLOQ-{00000}</displayFormat>
        <label>Nome de Regra de bloqueio por armazém</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Regras de bloqueio por armazém</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>