Git Tests/force-app/main/default/default/objects/RegraBloqueioArmazem__c/fields/Cliente__c.field-meta.xml
<CustomField>
    <fullName>Cliente__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cliente</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Regras de bloqueio por armazém</relationshipLabel>
    <relationshipName>RegraBloqueioArmazem</relationshipName>
    <type>Lookup</type>
</CustomField>