Git Tests/force-app/main/default/default/objects/RegraBloqueioArmazem__c/fields/CodigoArmazem__c.field-meta.xml
<CustomField>
    <fullName>CodigoArmazem__c</fullName>
    <label>Código do armazém</label>
    <length>255</length>
    <type>Text</type>
</CustomField>