Git Tests/force-app/main/default/default/objects/RegraBloqueioArmazem__c/fields/Motivo__c.field-meta.xml
<CustomField>
    <fullName>Motivo__c</fullName>
    <label>Motivo (Regra/Documento)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>