Git Tests/force-app/main/default/default/objects/RegraBloqueioArmazem__c/fields/Produto__c.field-meta.xml
<CustomField>
    <fullName>Produto__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Produto</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Regras de bloqueio por armazém</relationshipLabel>
    <relationshipName>RegraBloqueioArmazem</relationshipName>
    <type>Lookup</type>
</CustomField>