Git Tests/force-app/main/default/default/objects/RegraBloqueioArmazem__c/fields/TipoRegra__c.field-meta.xml
<CustomField>
    <fullName>TipoRegra__c</fullName>
    <label>Tipo da regra</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>Bloqueia demais armazéns</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Visualiza demais armazéns</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>